SpiderData/51cto/Clean/00001.txt
Traceback (most recent call last):
File “facebank.py”, line 12, in 
from utils import iter_files
File “/root/InsightFace_Pytorch/utils.py”, line 23
modules = [*modules.modules()]
^
SyntaxError: invalid syntax
root@ubuntu6920:~/InsightFace_Pytorch#

解决方案：

